[project]
name = "gpt-image-cli"
version = "0.1.0"
description = "OpenAI GPT Image 2 command-line interface — curated prompt templates and image generation/editing CLI with every documented API parameter exposed."
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-4.0"
authors = [
  { name = "wuyoscar" },
]
keywords = [
  "gpt-image-2",
  "openai",
  "image-generation",
  "cli",
  "prompt-library",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "openai>=1.55",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/wuyoscar/gpt_image_2_skill"
Repository = "https://github.com/wuyoscar/gpt_image_2_skill"
Issues = "https://github.com/wuyoscar/gpt_image_2_skill/issues"

[project.scripts]
gpt-image = "gpt_image_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
