[project]
name = "gpt-image-cli"
version = "0.2.0"
description = "OpenAI GPT Image 2 prompt gallery, image prompt library, agentic skill, and CLI for text-to-image generation and reference-image editing."
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-4.0"
authors = [
  { name = "wuyoscar" },
]
keywords = [
  "gpt-image-2",
  "gpt-image",
  "gpt-image-2-prompts",
  "openai",
  "image-generation",
  "image-editing",
  "image-prompt",
  "text-to-image",
  "prompt-gallery",
  "prompt-library",
  "prompt-templates",
  "image-to-prompt",
  "ai-image-prompts",
  "agent-skills",
  "codex-skill",
  "claude-code-skill",
  "cli",
  "research-figures",
  "ui-mockups",
  "game-hud",
  "typography",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "openai>=1.55",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/wuyoscar/gpt_image_2_skill"
Repository = "https://github.com/wuyoscar/gpt_image_2_skill"
Issues = "https://github.com/wuyoscar/gpt_image_2_skill/issues"

[project.scripts]
gpt-image = "gpt_image_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
